# simple-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
notebooks/: play_with_qdrant.ipynb
