[project]
name = "simple-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "fastapi>=0.115.14",
    "google-genai>=1.24.0",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.6",
    "langgraph>=0.5.1",
    "langgraph-api>=0.2.78",
    "langgraph-cli>=0.3.3",
    "langgraph-sdk>=0.1.72",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.14.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "unstructured>=0.18.2",
]
